--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,17 @@ format:
 execute:
     warning: false
     message: false
+knitr:
+  opts_chunk:
+    comment: ''
+include-in-header:
+  - text: |
+      <style>
+      .cell-output-stdout code {
+        word-break: break-wor !important;
+        white-space: pre-wrap !important;
+      }
+      </style>
 ---
 
 ## Intro
